  * Add myself to Uploaders.

  [ Pino Toscano ]
  * Add build dependencies:
    - libkonq5-dev
    - kdebase-workspace-dev
  * Remove unused build dependencies:
    - libgmp3-dev
    - libkwebkit-dev
  * Use wildcard architectures:
    - !kfreebsd-i386 !kfreebsd-amd64 !hurd-i386 -> linux-any
  * Remove libjasper-runtime recommend from kopete, as now it uses the jasper
    library directly.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 01 Sep 2010 18:14:10 +0300

kdenetwork (4:4.4.5-2) unstable; urgency=low

  * Point debian/control Vcs fields to the new Git repository.
  * Add patch 03_kopete_icq_login_fix.diff to change ICQ login server address.
    (Closes: #603661)
  * Solve circular dependencies by downgrading kopete Depends to Recommends
    for libkopete4. (Closes: #580044)

 -- Modestas Vainius <modax@debian.org>  Sun, 28 Nov 2010 17:25:54 +0200

kdenetwork (4:4.4.5-1) unstable; urgency=low

  [ Modestas Vainius ]
  * New upstream release.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Sune Vuorela ]
  * Update email address
  * Update descriptions

 -- Sune Vuorela <sune@debian.org>  Sun, 18 Jul 2010 12:53:35 +0200

kdenetwork (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Readd libtelepathy-qt4-dev to Build-Depends, update krdc.install
    appropriately.
  * Bump pkg-kde-tools build dependency to (>= 0.9) for HTML_INSTALL_DIR
    switch and 3.0 (quilt) source format support.
  * Switch to 3.0 (quilt) source package format and original tar.bz2
    tarballs.
  * Replace usr/share/doc/kde4 references with usr/share/doc/kde.
  * Drop quilt from Build-Depends, no longer needed for 3.0 (quilt).
  * Remove debian/README.source. Patch support is part of source format
    now.
  * Move debian/source.lintian-overrides to debian/source/lintian-overrides.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.4.
  * Drop 01_kget_CVE-2010-1000.diff patch, merged upstream.